--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-red-contrib-clearbit",
+  "name": "node-red-contrib-torrent-search-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,17 +8,16 @@
   },
   "node-red": {
     "nodes": {
-      "clearbit-config": "clearbit-config.js",
-      "clearbit-execute": "execute-node.js"
+      "torrent-search-api-execute": "execute-node.js"
     }
   },
   "author": "Benoit Lavorata",
   "repository": {
     "type": "git",
-    "url": "git+https://gitlab.com/benoit.lavorata/node-red-contrib-clearbit.git"
+    "url": "git+https://gitlab.com/benoit.lavorata/node-red-contrib-torrent-search-api.git"
   },
   "license": "ISC",
   "dependencies": {
-    "clearbit": "^1.3.4"
+    "torrent-search-api": "^2.0.9"
   }
 }
