--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": ["node-red"],
   "node-red": {
     "nodes": {
       "torrent-search-api-execute": "execute-node.js"
