--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "node-red-contrib-torrent-search-api",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["node-red"],
+  "keywords": [
+    "node-red"
+  ],
   "node-red": {
     "nodes": {
       "torrent-search-api-execute": "execute-node.js"
